    sandboxed.
  * Fixed a regression with specifying external templates to `motion create'.
  * Fixed a bug which WeakRef.new would cause a crash when passed nil, true,
    false, Fixnum or Float object.
  * Fixed issue where `vendor_project' with `:static' did not reuse `:cflags'
    for the BridgeSupport generation.
  * Improved String#to_sym performance. ~40% faster.

= RubyMotion 2.22 =

  * Fixed a bug with `vendor_project' and prebuilt libraries, where the
    BridgeSupport file could not be created, as the build directory wouldn’t
    exist yet.
  * Fixed a bug with `vendor_project' and Xcode projects, where the
    BridgeSupport files were being searched in the wrong location.

= RubyMotion 2.21 =

  * Added reference zeroing to `WeakRef' starting from iOS 5 and OS X 10.7. It
    will now raise an exception in case a message is sent after the reference
    has been deallocated. Use the `WeakRef#weakref_alive?' method to check if
    it has been deallocated or not.
  * Improved performance where Array elements would be converted from Ruby to
    Objective-C instance. ~10% faster.
  * Fixed a bug where incorrect SDK version values were being used in the
    Info.plist file resulting in iOS App Store submissions being rejected.
  * Fixed a bug where `motion update --cache-version=X' is broken.
  * Fixed a bug where vendored Xcode OS X projects were build with the
    IPHONEOS_DEPLOYMENT_TARGET option instead of MACOSX_DEPLOYMENT_TARGET.
  * Fixed a memory leak where the objects with a cyclic reference would not
    be released when used inside an asynchronous Dispatch::Queue.
  * Fixed a bug where BridgeSupport files for external projects included via
    `vendor_project' were being shared across platform and not removed with
    `rake clean'.

= RubyMotion 2.20 =

  * Improved command-line interface, e.g. `$ motion create --help' will now no
    longer create an application called ‘--help’. This deprecates the interface